@@ -1,3 +1,4 @@
+#include "Preferences/MerkaartorPreferences.h"
 #include "Map/Projection.h"
 #include "Map/Coord.h"
 
@@ -9,6 +10,7 @@
 #include <math.h>
 
 #define LAYERMANAGER_OK (layermanager->getLayers().size() > 0)
+#define BGPROJ_SELECTED (MerkaartorPreferences::instance()->getProjectionType() == Proj_Background)
 
 // from wikipedia
 #define EQUATORIALRADIUS 6378137
@@ -50,34 +52,42 @@ double Projection::lonAnglePerM(double Lat) const
 
 QPointF Projection::project(const Coord & Map) const
 {
-	if (LAYERMANAGER_OK)
+	if (LAYERMANAGER_OK && BGPROJ_SELECTED)
 	{
 		const QPointF c(radToAng(Map.lon()), radToAng(Map.lat()));
 		return coordinateToScreen(c);
 	}
 	return QPointF(Map.lon() * ScaleLon + DeltaLon,
 				   -Map.lat() * ScaleLat + DeltaLat);
+
 }
 
 Coord Projection::inverse(const QPointF & Screen) const
 {
-	if (LAYERMANAGER_OK)
+	if (LAYERMANAGER_OK && BGPROJ_SELECTED)
 	{
 		QPointF c(screenToCoordinate(Screen));
 		return Coord(angToRad(c.y()),angToRad(c.x()));
 	}
 	return Coord(-(Screen.y() - DeltaLat) / ScaleLat,
 				 (Screen.x() - DeltaLon) / ScaleLon);
+
 }
 
 void Projection::panScreen(const QPoint & p, const QRect & Screen)
 {
+	if (LAYERMANAGER_OK && BGPROJ_SELECTED) {
+		layermanager->scrollView(-p);
+		layerManagerViewportRecalc(Screen);
+		return;
+	}
+
 	DeltaLon += p.x();
 	DeltaLat += p.y();
 	viewportRecalc(Screen);
-	if (LAYERMANAGER_OK)
-		layermanager->scrollView(-p);
-	viewportRecalc(Screen);
+	if (LAYERMANAGER_OK) {
+		layerManagerSetViewport(Viewport, Screen);
+	}
 }
 
 CoordBox Projection::viewport() const
@@ -87,24 +97,10 @@ CoordBox Projection::viewport() const
 
 void Projection::viewportRecalc(const QRect & Screen)
 {
-	if (LAYERMANAGER_OK)
-	{
-		QPointF tr = screenToCoordinate(Screen.topRight());
-		QPointF bl = screenToCoordinate(Screen.bottomLeft());
-
-		Coord trc = Coord(angToRad(tr.y()), angToRad(tr.x()));
-		Coord blc = Coord(angToRad(bl.y()), angToRad(bl.x()));
-
-		Viewport = CoordBox(trc, blc);
-		ScaleLat = Screen.height()/Viewport.latDiff();
-		ScaleLon = Screen.width()/Viewport.lonDiff();
-	}
-	else
-		Viewport =
-			CoordBox(inverse(Screen.bottomLeft()),
-				 inverse(Screen.topRight()));
+	Viewport =
+		CoordBox(inverse(Screen.bottomLeft()),
+			 inverse(Screen.topRight()));
 }
-
 
 // Routines without layermanager
 
@@ -113,33 +109,35 @@ void Projection::setViewport(const CoordBox & TargetMap,
 {
 	if (LAYERMANAGER_OK)
 		layerManagerSetViewport(TargetMap, Screen);
-	else
-	{
-		Viewport = TargetMap;
-		Coord Center(Viewport.center());
-		double LengthOfOneDegreeLat = EQUATORIALRADIUS * PI / 180;
-		double LengthOfOneDegreeLon =
-			LengthOfOneDegreeLat * fabs(cos(Center.lat()));
-		double Aspect = LengthOfOneDegreeLon / LengthOfOneDegreeLat;
-		ScaleLon = Screen.width() / Viewport.lonDiff() * .9;
-		ScaleLat = ScaleLon / Aspect;
-		if ((ScaleLat * Viewport.latDiff()) > Screen.height())
-		{
-			ScaleLat = Screen.height() / Viewport.latDiff();
-			ScaleLon = ScaleLat * Aspect;
-		}
-		double PLon = Center.lon() * ScaleLon;
-		double PLat = Center.lat() * ScaleLat;
-		DeltaLon = Screen.width() / 2 - PLon;
-		DeltaLat = Screen.height() - (Screen.height() / 2 - PLat);
-		viewportRecalc(Screen);
+	if (LAYERMANAGER_OK && BGPROJ_SELECTED) {
+		layerManagerViewportRecalc(Screen);
+		return;
 	}
+
+	Viewport = TargetMap;
+	Coord Center(Viewport.center());
+	double LengthOfOneDegreeLat = EQUATORIALRADIUS * PI / 180;
+	double LengthOfOneDegreeLon =
+		LengthOfOneDegreeLat * fabs(cos(Center.lat()));
+	double Aspect = LengthOfOneDegreeLon / LengthOfOneDegreeLat;
+	ScaleLon = Screen.width() / Viewport.lonDiff() * .9;
+	ScaleLat = ScaleLon / Aspect;
+	if ((ScaleLat * Viewport.latDiff()) > Screen.height())
+	{
+		ScaleLat = Screen.height() / Viewport.latDiff();
+		ScaleLon = ScaleLat * Aspect;
+	}
+	double PLon = Center.lon() * ScaleLon;
+	double PLat = Center.lat() * ScaleLat;
+	DeltaLon = Screen.width() / 2 - PLon;
+	DeltaLat = Screen.height() - (Screen.height() / 2 - PLat);
+	viewportRecalc(Screen);
 }
 
 void Projection::zoom(double d, const QPointF & Around,
 							 const QRect & Screen)
 {
-	if (LAYERMANAGER_OK)
+	if (LAYERMANAGER_OK && BGPROJ_SELECTED)
 	{
 		screen_middle = QPoint(Screen.width() / 2, Screen.height() / 2);
 
@@ -151,7 +149,7 @@ void Projection::zoom(double d, const QPointF & Around,
 		else
 			if (d > 1)
 				layermanager->zoomIn();
-		viewportRecalc(Screen);
+		layerManagerViewportRecalc(Screen);
 		QPoint v_after = coordinateToScreen(v_before);
 		panScreen(c-v_after, Screen);
 	}
@@ -164,27 +162,42 @@ void Projection::zoom(double d, const QPointF & Around,
 		DeltaLat = Around.y() + Before.lat() * ScaleLat;
 		DeltaLon = Around.x() - Before.lon() * ScaleLon;
 		viewportRecalc(Screen);
+		if (LAYERMANAGER_OK) {
+			layerManagerSetViewport(Viewport, Screen);
+		}
+
 	}
 }
 
 
 // Routines with layermanager
 
+void Projection::layerManagerViewportRecalc(const QRect & Screen)
+{
+	QPointF tr = screenToCoordinate(Screen.topRight());
+	QPointF bl = screenToCoordinate(Screen.bottomLeft());
+
+	Coord trc = Coord(angToRad(tr.y()), angToRad(tr.x()));
+	Coord blc = Coord(angToRad(bl.y()), angToRad(bl.x()));
+
+	Viewport = CoordBox(trc, blc);
+	ScaleLat = Screen.height()/Viewport.latDiff();
+	ScaleLon = Screen.width()/Viewport.lonDiff();
+}
+
 void Projection::layerManagerSetViewport(const CoordBox & TargetMap, const QRect& Screen)
 {
 	screen_middle = QPoint(Screen.width() / 2, Screen.height() / 2);
-	Viewport = TargetMap;
 	QPoint screen_middle = QPoint(Screen.width() / 2, Screen.height() / 2);
 
 	QList < QPointF > ql;
-	Coord cbl(Viewport.bottomLeft());
+	Coord cbl(TargetMap.bottomLeft());
 	QPointF cblf = QPointF(radToAng(cbl.lon()), radToAng(cbl.lat()));
 	ql.append(cblf);
-	Coord ctr(Viewport.topRight());
+	Coord ctr(TargetMap.topRight());
 	QPointF ctrf = QPointF(radToAng(ctr.lon()), radToAng(ctr.lat()));
 	ql.append(ctrf);
 	layermanager->setView(ql);
-	viewportRecalc(Screen);
 }
 
 QPointF Projection::screenToCoordinate(QPointF click) const
